<resources>
    <string name="app_name">Quiz Trivia</string>
    <string name="question_count_placeholder">Question %s/%s</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="show_history">Show History</string>
    <string name="invalid_answer_msg">Please Choose an answer to continue</string>
    <string name="current_score_placeholder">Current Score : <b>%s</b></string>
    <string name="quiz_over_title">Quiz is Over! Your Final Score is</string>
    <string name="total_correct">Total Correct</string>
    <string name="total_incorrect">Total Incorrect</string>
    <string name="play_again">Play Again</string>
    <string name="fetching_question_message">Please wait while fetching the question list.This may take a while...</string>
    <string name="quiz">Quiz</string>
    <string name="quiz_history">Quiz History</string>
    <string name="quiz_finished">Quiz Finished!</string>
    <string name="total_question">Total Question</string>
    <string name="quiz_time">Quiz Time</string>
    <string name="start_quiz_desc">Start  a new quiz with random question from OpenTrivia question source. Total <b>10 Questions</b> to test your knowledge</string>
    <string name="show_history_desc"><![CDATA[See the history of your previously taken quizzes & measure how you have improved yourself with times.]]></string>
    <string name="no_history_found">No History Found!</string>

</resources>