<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.quiz.QuizActivity">

    <TextView
        android:id="@+id/questionCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16"
        android:text="@string/question_count_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16"
        android:text="@string/current_score_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/timeCountProgressView"
        android:layout_width="@dimen/time_count_progress_dimen"
        android:layout_height="@dimen/time_count_progress_dimen"
        app:cpb_progress="50"
        app:cpb_progressbar_color="@color/purple_500"
        app:cpb_background_progressbar_color="@color/purple_200"
        app:cpb_background_progressbar_width="@dimen/dimen_6"
        app:layout_constraintTop_toBottomOf="@id/questionCountLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/answerTypeView"
        android:layout_width="@dimen/time_count_progress_dimen"
        android:layout_height="@dimen/time_count_progress_dimen"
        android:padding="@dimen/dimen_16"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/questionCountLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/correct_answer" />

    <TextView
        android:id="@+id/timeCountView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="00:00:30"
        android:gravity="center"
        android:padding="@dimen/dimen_16"
        app:layout_constraintTop_toBottomOf="@id/timeCountProgressView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/answerStackView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/answer_stack_item_view"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/timeCountView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/questionListContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_16"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/answerStackView">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/questionList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_16"
            app:layout_constraintBottom_toTopOf="@+id/submitButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timeCountView"
            />

    </androidx.core.widget.NestedScrollView>


    <Button
        android:id="@+id/submitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:padding="@dimen/dimen_16"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />






</androidx.constraintlayout.widget.ConstraintLayout>